--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,24 +10,29 @@ add_executable(IFJ2023_Swift src/main.c
         src/utils/util.c
         src/utils/util.h
 
-
-
-        src/structures/hashmap/hashmap.c
-        src/structures/hashmap/hashmap.h
-        src/structures/hashmap/hashmap_void.c
-        src/structures/hashmap/hashmap_void.h
+        src/structures/hashmap/hashtable.c
+        src/structures/hashmap/hashtable.h
 
         src/model/token/token.c
         src/model/token/token.h
 
         src/structures/string/string.h
         src/structures/string/string.c
+
         src/parser/parser.c
         src/parser/parser.h
+
+        src/scanner/scanner_configs.c
         src/scanner/scanner.c
         src/scanner/scanner.h
-        src/scanner/scanner.h
+
         src/structures/vector/vector.h
         src/structures/vector/vector.h
 
+        src/model/error/error.c
+        src/model/error/error.h
+
+        src/structures/automata/automata.c
+        src/structures/automata/automata.h
+        src/utils/logger.h
 )
