Scanner Configs CONDITIONS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,4 +39,6 @@ add_executable(IFJ2023_Swift src/main.c
         src/scanner/configs/value_configs.c
         src/scanner/configs/id_configs.c
         src/scanner/configs/type_configs.c
+        src/scanner/configs/conditions_configs.c
+        src/scanner/configs/conditions_configs.c
 )
