--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,4 +42,5 @@ add_executable(IFJ2023_Swift src/main.c
         src/scanner/configs/conditions_configs.c
         src/scanner/configs/conditions_configs.c
         src/scanner/configs/general_type_configs.c
+        src/scanner/configs/cycle_configs.c
 )
