Scanner Configs SPECIAL_SYMBOLS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,4 +43,5 @@ add_executable(IFJ2023_Swift src/main.c
         src/scanner/configs/conditions_configs.c
         src/scanner/configs/general_type_configs.c
         src/scanner/configs/cycle_configs.c
+        src/scanner/configs/special_symbols_configs.c
 )
