--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,4 +44,5 @@ add_executable(IFJ2023_Swift src/main.c
         src/scanner/configs/general_type_configs.c
         src/scanner/configs/cycle_configs.c
         src/scanner/configs/special_symbols_configs.c
+        src/scanner/configs/math_operations_configs.c
 )
