--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,4 +67,5 @@ add_executable(IFJ2023_Swift src/main.c
         src/test/automata_test/automata_test.h
         src/test/automata_test/automata_test.c
         src/utils/logger.c
+        src/test/scanner_test/scanner-test.c
 )
