parser the simplest LR implementation
1) parser key generation
2) building of parser automata

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,4 +68,6 @@ add_executable(IFJ2023_Swift src/main.c
         src/test/automata_test/automata_test.c
         src/utils/logger.c
         src/test/scanner_test/scanner-test.c
+        src/parser/config/key/config_parser_key.h
+        src/parser/config/key/config_parser_key.c
 )
